-Enabled logout functionality to disable current session

--- a/spring-boot-ignite-secured/src/main/resources/public/app/views/shell.html
+++ b/spring-boot-ignite-secured/src/main/resources/public/app/views/shell.html
@@ -34,18 +34,18 @@
 	           	</ul>
 			</div> -->
 			
-			<!-- <div class="nav navbar-nav navbar-right" style="padding-right:25px">
+			<div class="nav navbar-nav navbar-right" style="padding-right:25px">
 				<div>
-					<a data-bind="click: userSettings" href="javascript:void(0)">
+					<!-- <a data-bind="click: userSettings" href="javascript:void(0)">
 						<i class="fam-user-suit"></i>
 						<span data-bind="text: user.fullName"></span>
 					</a> | 
-					<span data-bind="text: user.userType"></span> | 
+					<span data-bind="text: user.userType"></span> |  -->
 					<a data-bind="click: logout" href="javascript:void(0)">
 			        	<span>Logout</span>
 			        </a>
 				</div>				
-	        </div> -->
+	        </div>
         </div>
     </nav>
 
